# dlc-stack

./: .gitignore  Cargo.toml  Dockerfile.wallet  Makefile  docker-compose.yml
.github/workflows/: docker-build-dev.yml  docker-build-pr.yml  docker-build-tagged.yml  docker-build-test.yml  docker-build.yml
attestor/: .gitignore  Cargo.toml  Dockerfile  README.md  build_and_start.sh  config.yaml  docker-compose.yml
attestor-client/: Cargo.toml
attestor-client/src/: lib.rs
attestor/config/: secret1.key  secret2.key  secret3.key
attestor/observer/: .env.template  build_all.sh  package-lock.json  package.json
attestor/observer/src/: index.ts
attestor/observer/src/chains/ethereum/: get-observer.ts
attestor/observer/src/chains/stacks/config/: get-config.ts
attestor/observer/src/chains/stacks/config/contract-configs/: dlc-manager-v1.ts
attestor/observer/src/chains/stacks/models/: interfaces.ts
attestor/observer/src/chains/stacks/utilities/: api-calls.ts
attestor/observer/src/config/: read-env-configs.ts
attestor/observer/src/http/: routes.ts
attestor/observer/src/services/: attestor.service.ts
attestor/src/: lib.rs
attestor/src/oracle/: error.rs  handler.rs  mod.rs  secret_key.rs
blockcypher-blockchain-provider/: cargo.toml
blockcypher-blockchain-provider/src/: lib.rs
clients/: Cargo.toml
clients/src/: async_storage_provider.rs  lib.rs
dlc-bdk-wallet/: Cargo.toml
dlc-bdk-wallet/src/: lib.rs
dlc-blockchain-provider/: Cargo.toml
dlc-blockchain-provider/src/: lib.rs
dlc-link-manager/: Cargo.toml
dlc-link-manager/src/: contract_updater.rs  lib.rs  utils.rs
dlc-memory-storage-provider/: Cargo.toml
dlc-memory-storage-provider/src/: lib.rs
dlc-simple-wallet/: Cargo.toml
dlc-simple-wallet/src/: lib.rs
dlc-storage-provider/: Cargo.toml
dlc-storage-provider/src/: lib.rs
dlc-wallet/: Cargo.toml
docker/: Dockerfile  Dockerfile.prerelease  Dockerfile.storage-api
esplora-async-blockchain-provider/: Cargo.toml
esplora-async-blockchain-provider-js-wallet/: Cargo.toml
esplora-async-blockchain-provider-locking/: Cargo.toml
esplora-async-blockchain-provider-locking/src/: lib.rs
esplora-async-blockchain-provider-router-wallet/: Cargo.toml
esplora-async-blockchain-provider/src/: lib.rs
it/: .env.template  Cargo.toml  Dockerfile  config.js  docker-compose.yml  index.js  package-lock.json  package.json
it/scripts/: build.sh  start-apps.sh
it/src/: config.js  index.js
it/tests/: integration_tests.rs
js-interface-wallet/: Cargo.toml
js-interface-wallet/src/: lib.rs
mock-blockchain-provider/: Cargo.toml
mock-blockchain-provider/src/: lib.rs
oracle/: Cargo.toml
oracle-discovery/: Cargo.toml
oracle-discovery/src/: main.rs  oracles.rs
oracle/src/: main.rs
oracle/src/oracle/: error.rs  handler.rs  mod.rs
storage/: justfile
storage/api/: Cargo.toml
storage/api/src/: contracts.rs  events.rs  main.rs  verify_sigs.rs
storage/common/: Cargo.toml
storage/common/src/: lib.rs
wallet/: .env.template  .gitignore  .rustc_info.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
wallet-blockchain-interface/: .env.template  Dockerfile  package-lock.json  package.json
wallet-blockchain-interface/src/chains/ethereum/: get-config.ts
wallet-blockchain-interface/src/chains/ethereum/utilities/: websocket-provider.ts
wallet-blockchain-interface/src/chains/shared/models/: wrapped-contract.interface.ts
wallet-blockchain-interface/src/chains/stacks/: get-config.ts  get-network-config.ts  get-observer.ts
wallet-blockchain-interface/src/config/: models.ts  read-env-configs.ts
wallet-blockchain-interface/src/http/: routes.ts
wallet-blockchain-interface/src/services/: blockchain-writer.service.ts
wallet/blockchain-interface/: .env.template  .prettierrc  package-lock.json  package.json  tsconfig.json
wallet/blockchain-interface/src/: index.ts
wallet/blockchain-interface/src/chains/ethereum/: get-config.ts  get-observer.ts
wallet/blockchain-interface/src/chains/ethereum/contracts/: dlc-manager-v0.ts  dlc-manager-v1.ts
wallet/blockchain-interface/src/chains/stacks/: get-observer.ts
wallet/blockchain-interface/src/config/: get-observers.ts  models.ts  read-env-configs.ts
wallet/blockchain-interface/src/http/: routes.ts  server.ts
wallet/blockchain-interface/src/services/: attestor.service.ts  blockchain-writer.service.ts
wallet/docker/: .env.template  Dockerfile.utils  docker-compose.yml
wallet/src/: contract.json  contractbad.json  lib.rs  main.rs  main_warp_test-file.rs  oracle_client.rs
wallet/src/storage/: async_storage_api.rs  memory_storage.rs  mod.rs  storage_api.rs  storage_provider.rs
wallet/src/wallet_db_regtest/: db  snap.000000000000070B
wallet/wallet-blockchain-interface/: .env.template
wallet/wallet-blockchain-interface/src/chains/stacks/: get-network-config.ts
wallet/wallet-blockchain-interface/src/http/: middlewares.ts  routes.ts
wallet/wallet-blockchain-interface/src/http/private-server/: routes.ts
wallet/wallet-blockchain-interface/src/http/public-server/: routes.ts
wallet/wallet-blockchain-interface/src/services/: router-wallet.service.ts
wallet/www/: index.js  package-lock.json  package.json
wasm-wallet/: .gitignore  Cargo.toml  justfile  package-lock.json
wasm-wallet/src/: contract.json  contractbad.json  lib.rs  oracle_client.rs
wasm-wallet/src/storage/: async_storage_api.rs  storage_provider.rs
wasm-wallet/www/: .gitignore  index.html  index.js  package-lock.json  package.json  sample_utxos.json  webpack.config.js
~/Users/adamdanielpuskas/Documents/DLC.Link/dlc-stack/wallet_db_testnet_testnet/: db  snap.0000000000001C74  snap.0000000000002161
