[package]
authors = ["DLC-Link"]
description = "Creation and handling of Discrete Log Contracts (DLC)."
edition = "2018"
homepage = "https://github.com/dlc-link/dlc-stack"
license-file = "../LICENSE"
name = "dlc-link-manager"
repository = "https://github.com/dlc-link/dlc-stack/dlc-link-manager"
version = "0.4.0"

[dependencies]
# async-trait = "0.1.50"
bitcoin = {version = "0.29.2", features = ["serde"]}
dlc = { path = "../../rust-dlc/dlc", features = ["use-serde"] }
dlc-manager = { path = "../../rust-dlc/dlc-manager", features = ["use-serde"] }
dlc-messages = { path = "../../rust-dlc/dlc-messages", features = ["use-serde"]}
dlc-trie = { path = "../../rust-dlc/dlc-trie", features = ["use-serde"]}
lightning = {version = "0.0.113"}
log = "0.4.14"
rand_chacha = {version = "0.3.1", optional = true}
secp256k1-zkp = {version = "0.7.0", features = ["bitcoin_hashes", "rand", "rand-std"]}
serde = {version = "1.0", optional = true}

# [dev-dependencies]
# bitcoin-rpc-provider = {path = "../bitcoin-rpc-provider"}
# bitcoin-test-utils = {path = "../bitcoin-test-utils"}
# bitcoincore-rpc = {version = "0.16.0"}
# bitcoincore-rpc-json = {version = "0.16.0"}
# criterion = "0.4.0"
# dlc-manager = {path = ".", features = ["use-serde"]}
# dlc-messages = { git = "https://github.com/dlc-link/rust-dlc", rev="e59ed0ce2a7d10ab974b5890f8c0d0fb103c761a", features = ["use-serde"]}
# electrs-blockchain-provider = {path = "../electrs-blockchain-provider"}
# env_logger = "0.9.1"
# mocks = {path = "../mocks"}
# secp256k1-zkp = {version = "0.7.0", features = ["bitcoin_hashes", "rand", "rand-std", "global-context", "use-serde"]}
# serde = "1.0"
# serde_json = "1.0"
# simple-wallet = {path = "../simple-wallet"}

# [[bench]]
# harness = false
# name = "benchmarks"
