[package]
authors = ["Crypto Garage"]
edition = "2018"
name = "dlc-memory-storage-provider"
version = "0.1.0"

[dependencies]
bitcoin = {version = "0.29.2", features=["serde"]}
dlc = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-link-manager = { path = "../dlc-link-manager" }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-messages = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"]}
lightning = {version = "0.0.113"}
secp256k1-zkp = {version = "0.7.0", features = ["bitcoin_hashes", "global-context", "rand", "rand-std"]}
