[package]
edition = "2018"
name = "dlc-simple-wallet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29"
dlc = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
lightning = {version = "0.0.113"}
bdk = {version = "0.28.0", default-features = false, features = ["async-interface", "use-esplora-async"]}
secp256k1-zkp = {version = "0.7.0"}
simple-wallet =  { git = "https://github.com/dlc-link/rust-dlc" }

[dev-dependencies]
secp256k1-zkp = {version = "0.7.0", features = ["global-context"]}
