[package]
authors = ["DLC.Link"]
edition = "2018"
name = "esplora-async-blockchain-provider"
version = "0.1.0"

[dependencies]
bitcoin = {version = "0.29.2", features=["serde"]}
futures = {version = "0.3.28", default-features = false }
lightning = {version = "0.0.113" }
dlc-manager = { path = "../../original-rust-dlc/dlc-manager", features = ["use-serde"] }
# simple-wallet = { path = "../../original-rust-dlc/simple-wallet" }
js-interface-wallet = { path = "../js-interface-wallet"}
serde = {version = "*", features = ["derive"]}
bdk = {version = "0.28.0", default-features = false, features = ["async-interface", "use-esplora-async"]}
miniscript = { version = "9.0", features = ["std"] }
reqwest = {version = "0.11", features = ["json"]}
wasm-bindgen-futures = { version = "0.4.34"}
