[package]
edition = "2021"
name = "dlc-integration-tests"
version = "0.1.0"

[dev-dependencies]
cucumber = "0.19"
futures = "0.3"
derive_more = "0.99.0"
tokio = "1.23.0"
dlc-clients = { path = "../clients" }
reqwest = { version = "0.11.6", features = ["json"] }

[[test]]
name = "integration_tests"
harness = false
