[package]
edition = "2018"
name = "js-interface-wallet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = {version = "0.29.2", features=["serde"]}
dlc = {path = "../../../rust-dlc/dlc", features = ["use-serde"]}
dlc-manager = {path = "../../../rust-dlc/dlc-manager", features = ["use-serde"]}
lightning = {version = "0.0.113"}
rust-bitcoin-coin-selection = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection", features = ["rand"]}
secp256k1-zkp = {version = "0.7.0"}

[dev-dependencies]
mocks = {path = "../../../rust-dlc/mocks"}
secp256k1-zkp = {version = "0.7.0", features = ["global-context"]}
