# cargo-features = ["per-package-target"]

[package]
edition = "2021"
name = "dlc-protocol-wallet"
version = "0.4.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.1"
bitcoin = {version = "0.29.2", features=["serde"]}
chrono = {version = "0.4.19", features = ["serde"]}
# dlc = {version = "0.4.0", git = "https://github.com/p2pderivatives/rust-dlc", tag="v0.4.0", features = ["use-serde"]}
dlc-manager = {version = "0.4.0", git = "https://github.com/p2pderivatives/rust-dlc", tag="v0.4.0", features = ["use-serde"]}
dlc-messages = {version = "0.4.0", git = "https://github.com/p2pderivatives/rust-dlc", tag="v0.4.0", features = ["use-serde"]}
dlc-trie = {version = "0.4.0", git = "https://github.com/p2pderivatives/rust-dlc", tag="v0.4.0", features = ["use-serde"]}
dlc-sled-storage-provider = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-dlc", tag="v0.4.0", features=["wallet"]}
# electrs-blockchain-provider = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-dlc", tag="v0.4.0"}
rust-bitcoin-coin-selection = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection", features = ["rand"]}
mocks = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-dlc", tag="v0.4.0"}
env_logger = "0.9.0"
getrandom = { version = "0.2", features = ["js"] }
lightning = {version = "0.0.113" }
hex = "0.4"
log = "0.4.17"
reqwest = {version = "0.11.16"}
# dlc-clients = { path = "../clients"  }
rouille = {version = "3.5.0"}
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.81"
secp256k1-zkp = {version = "0.7.0" }
simple-wallet = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-dlc", tag="v0.4.0"}
sled = "0.34"
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tokio = {version = "1.23.0" } #, optional = true}
wasm-bindgen-futures = {version="0.4.34"}
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"]  }
# warp = "0.3"

[dev-dependencies]
mockito = "0.31.0"

# [features]
# async_support = ["dep:tokio", "dlc-clients/async-support"]
# wasm_support = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dlc-clients/wasm-support"]
