[package]
edition = "2021"
name = "dlc-protocol-wallet"
version = "0.4.0"

[[bin]]
name = "dlc-protocol-wallet"
path = "src/main.rs"

[dependencies]
base64 = "0.13.1"
bdk = {version = "0.28.0", default-features = false, features = ["keys-bip39", "key-value-db", "use-esplora-reqwest", "reqwest-default-tls", "async-interface"]}
bitcoin = {version = "0.29.2"}
bytes = "1"
chrono = {version = "0.4.19", features = ["serde"]}
dlc = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-link-manager = { path = "../dlc-link-manager" }
dlc-clients = { path = "../clients" }
dlc-messages = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"]}
dlc-trie = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"]}
dlc-sled-storage-provider = { git = "https://github.com/dlc-link/rust-dlc", features = ["wallet"]}
#electrs-blockchain-provider = { git = "https://github.com/dlc-link/rust-dlc" }
esplora-async-blockchain-provider = { path = "../esplora-async-blockchain-provider" }
env_logger = "0.9.0"
futures-util = { version = "0.3", default-features = false }
lightning = {version = "0.0.113" }
hex = "0.4"
hyper = {version = "0.14", features = ["full"]}
http = "0.2"
http-body = "=1.0.0-rc.2"
http-body-util = "0.1.0-rc.3"
log = "0.4.17"
reqwest = {version = "0.11", features = ["blocking", "json", "rustls-tls"]}
# rouille = {version = "3.5.0"}
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.81"
secp256k1-zkp = {version = "0.7.0" }
dlc-bdk-wallet = { path = "../dlc-bdk-wallet" }
sled = "0.34"
tokio = {version = "1.31.0", features = ["rt"]}
warp = "0.3"
pretty_env_logger = "0.4.0"

[dev-dependencies]
mockito = "0.31.0"
