[package]
edition = "2021"
name = "dlc-protocol-wallet"
version = "0.4.0"

[[bin]]
name = "dlc-protocol-wallet"
path = "src/main.rs"

[dependencies]
base64 = "0.13.1"
bitcoin = {version = "0.29.2"}
chrono = {version = "0.4.19", features = ["serde"]}
dlc = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"] }
dlc-link-manager = { path = "../dlc-link-manager" }
dlc-clients = { path = "../clients" }
dlc-messages = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"]}
dlc-trie = { git = "https://github.com/dlc-link/rust-dlc", features = ["use-serde"]}
dlc-sled-storage-provider = { git = "https://github.com/dlc-link/rust-dlc", features = ["wallet"]}
electrs-blockchain-provider = { git = "https://github.com/dlc-link/rust-dlc" }
env_logger = "0.9.0"
lightning = {version = "0.0.113" }
hex = "0.4"
log = "0.4.17"
reqwest = {version = "0.11", features = ["blocking", "json", "rustls-tls"]}
rouille = {version = "3.5.0"}
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.81"
secp256k1-zkp = {version = "0.7.0" }
dlc-simple-wallet =  { path = "../dlc-simple-wallet" }
sled = "0.34"
tokio = "1.23.0"
warp = "0.3"

[dev-dependencies]
mockito = "0.31.0"
